# quaestor

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  docker-compose.yml
frontend/: package.json
frontend/src/: App.vue  globals.ts
frontend/src/views/: Create.vue  Home.vue  List.vue
src/: main.rs
templates/: template.html.tera
templates/translations/: de-DE.ftl  en-US.ftl
